# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "basePath": "/",
     "paths": {
-        "/api/admin/game/{gameId}": {
+        "/api/admin/game/{gameId}/state": {
             "get": {
                 "description": "Returns complete game information with all player cards",
                 "produces": [
@@ -136,29 +136,6 @@
                         "description": "event stream",
                         "schema": {
                             "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/api/hello": {
-            "get": {
-                "description": "Simple hello world endpoint",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "example"
-                ],
-                "summary": "Returns a greeting",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
                         }
                     }
                 }
